--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
                    <a class="nav-link" href="https://www.facebook.com/" target="_blank"> fb</a></li>
                <li class="nav-item ">
                 <a class="nav-link" href="https://www.messenger.com/"target="_blank"> mess</a></li>
-            <li class="nav-item ">
+               <li class="nav-item ">
                 <a class="nav-link" href="https://www.youtube.com/"target="_blank"> yotoube</a></li>
-            <li class="nav-item ">
+               <li class="nav-item ">
                 <a class="nav-link" href="https://chat.zalo.me/"target="_blank"> zalo</a></li>
-             </ul>
+                <li class="nav-item ">
+                    <a class="nav-link" href="/anh/2.TKB số 2 năm học 2024-2025 thực hiện từ ngày 09.09.2024.pdf"target="_blank">tkb</a></li>    
+            </ul>
           </div>
        </div>     
     </body>
