--- a/wed.html
+++ b/wed.html
@@ -18,11 +18,13 @@
                    <a class="nav-link" href="https://www.facebook.com/" target="_blank"> fb</a></li>
                <li class="nav-item ">
                 <a class="nav-link" href="https://www.messenger.com/"target="_blank"> mess</a></li>
-            <li class="nav-item ">
+               <li class="nav-item ">
                 <a class="nav-link" href="https://www.youtube.com/"target="_blank"> yotoube</a></li>
-            <li class="nav-item ">
+               <li class="nav-item ">
                 <a class="nav-link" href="https://chat.zalo.me/"target="_blank"> zalo</a></li>
-             </ul>
+                <li class="nav-item ">
+                    <a class="nav-link" href="https://www.tiktok.com/"target="_blank">tiktok</a></li>    
+            </ul>
           </div>
        </div>     
     </body>
