--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
                <li class="nav-item ">
                 <a class="nav-link" href="https://chat.zalo.me/"target="_blank"> zalo</a></li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/anh/2.TKB số 2 năm học 2024-2025 thực hiện từ ngày 09.09.2024.pdf"target="_blank">tkb</a></li>    
+                    <a class="nav-link" href="https://www.tiktok.com/"target="_blank">tiktok</a></li>    
             </ul>
           </div>
        </div>     
     </body>
 </html> 
-<!--  cái này á uh -->
