--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                <li class="nav-item ">
                 <a class="nav-link" href="https://chat.zalo.me/"target="_blank"> zalo</a></li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="https://www.tiktok.com/"target="_blank">tiktok</a></li>    
+                    <a class="nav-link" href="https://www.tiktok.com/"target="_blank">tiktok</a></li> 
+                <li class="nav-item ">
+                    <a class="nav-link" href="https://www.instagram.com/="_blank">instagram</a></li> 
             </ul>
           </div>
        </div>     
