--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="nav-item ">
                     <a class="nav-link" href="https://www.tiktok.com/"target="_blank">tiktok</a></li> 
                 <li class="nav-item ">
-                    <a class="nav-link" href="https://www.instagram.com/="_blank">instagram</a></li> 
+                    <a class="nav-link" href="https://www.instagram.com/"target="_blank">instagram</a></li> 
             </ul>
           </div>
        </div>     
